Fix flickering tooltip bug

--- a/apps/src/templates/curriculumCatalog/curriculum_catalog_card.module.scss
+++ b/apps/src/templates/curriculumCatalog/curriculum_catalog_card.module.scss
@@ -98,6 +98,7 @@ $container-width: 309px;
 .labelTooltip {
   opacity: 1;
   margin-bottom: 0.75em;
+  pointer-events: none;
 
   :global(.tooltip-inner) { /* stylelint-disable-line selector-pseudo-class-no-unknown */
     border-radius: 5px;
